Project Task Management App updated

--- a/index.html
+++ b/index.html
@@ -383,9 +383,31 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <p class="sectionHeadingP"></p>
         </div>
         <div class="project-boxes-div">
-          <!-- ----------Cyborg AI------------ -->
+          <!-- ----------Task Management Mobile App------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box1" id="project-box1">
+              <div class="info-div">
+                <img src="src/webp/taskmanagemanelogo.webp" alt="cyborgiacybepunk website favicon"
+                  class="faviconforProjecttaskmanagementapp" />
+                <article class="ProjectHeading">Task Management App</article>
+                <p class="ProjectDescription">
+                  Enter your A smooth & interactive project tracking app that simplifies task delegation, scheduling, and collaboration. ✨
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.figma.com/proto/m1qKukuR6E2ey6Stgr9E4s/Project-Management-Mobile-App?page-id=0%3A1&node-id=4-2&viewport=471%2C287%2C0.35&t=mlPHlH7EWeCNlK2K-1&scaling=scale-down&content-scaling=fixed" target="_blank" class="github-redirect"
+                    aria-label="Visit Cyberpunk Landing Page Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/webp/taskmanagementapp.webp" alt="Task Management App preview image" />
+              </div>
+            </div>
+          </div>
+          <!-- ----------Cyborg AI------------ -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box1" id="project-box2">
               <div class="info-div">
                 <img src="src/webp/cyborgailogo.webp" alt="cyborgiacybepunk website favicon"
                   class="faviconforProjectCyberg" />
@@ -407,7 +429,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- ----------Headway------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box2" id="project-box2">
+            <div class="project-box project-box2" id="project-box3">
               <div class="info-div">
                 <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
                   class="faviconforProjectAquaregia" />
@@ -437,7 +459,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------MyBzB-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box3" id="project-box3">
+            <div class="project-box project-box3" id="project-box4">
               <div class="info-div">
                 <img src="src/png/mybzb.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">My BzB</article>
@@ -471,7 +493,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------SSU-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box4" id="project-box4">
+            <div class="project-box project-box4" id="project-box5">
               <div class="info-div">
                 <img src="src/png/ssu_logo.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Suvarna Saubhagya Utsav</article>
@@ -505,7 +527,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- -----------Gamexso----------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box5" id="project-box5">
+            <div class="project-box project-box5" id="project-box6">
               <div class="info-div">
                 <img src="src/webp/gamexso_logo.webp" alt="Gamexso website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Gamexso</article>
@@ -536,7 +558,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
 
           <!-- ------------Quantic POS---------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box6" id="project-box6">
+            <div class="project-box project-box6" id="project-box7">
               <div class="info-div">
                 <img src="src/png/quantic_pos.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic POS</article>
@@ -569,7 +591,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <!-- ---------Quantic Lite------------- -->
 		  
 		  <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box7" id="project-box7">
+            <div class="project-box project-box7" id="project-box8">
               <div class="info-div">
                 <img src="src/png/quantic_lite.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic Lite</article>
