Project Worktide SaaS Admin Dashboard Added

--- a/index.html
+++ b/index.html
@@ -383,9 +383,31 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <p class="sectionHeadingP"></p>
         </div>
         <div class="project-boxes-div">
-          <!-- ----------Task Management Mobile App------------ -->
+          <!-- ----------Worktide SaaS Admin Dashboard – Light & Dark Mode UI!------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box1" id="project-box1">
+              <div class="info-div">
+                <img src="src/webp/worktidelogo.webp" alt="Worktide Saas Admin Dashboard"
+                  class="faviconforworktidesaasadmindashboard" />
+                <article class="ProjectHeading">Worktide SaaS Admin Dashboard</article>
+                <p class="ProjectDescription">
+                  Managing projects has never been easier! With a clean UI, insightful analytics, and a seamless user experience, this dashboard is designed to optimize workflow efficiency.
+                </p>
+                <div class="project-buttons">
+                  <a href="https://www.figma.com/proto/AP9X2UHkAMYZcs3E8vtYc4/Worktide_SaasAdminDashboard_AllPage?page-id=0%3A1&node-id=15-1809&viewport=469%2C268%2C0.1&t=6dEouVrAd16BJ5DN-1&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=6%3A1" target="_blank" class="github-redirect"
+                    aria-label="Visit Cyberpunk Landing Page Prototype">
+                    <img src="src/svg/figmalogo.svg" alt="github redirect button" />
+                  </a>
+                </div>
+              </div>
+              <div class="image-div">
+                <img src="src/png/worktide_saas_dashboard.png" alt="Worktide SaaS Admin Dashboard preview image" />
+              </div>
+            </div>
+          </div>
+          <!-- ----------Task Management Mobile App------------ -->
+          <div class="project-box-wrapper" data-aos="fade-up">
+            <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
                 <img src="src/webp/taskmanagementlogo.webp" alt="cyborgiacybepunk website favicon"
                   class="faviconforProjecttaskmanagementapp" />
@@ -407,7 +429,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- ----------Cyborg AI------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box1" id="project-box2">
+            <div class="project-box project-box3" id="project-box3">
               <div class="info-div">
                 <img src="src/webp/cyborgailogo.webp" alt="cyborgiacybepunk website favicon"
                   class="faviconforProjectCyberg" />
@@ -429,7 +451,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- ----------Headway------------ -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box2" id="project-box3">
+            <div class="project-box project-box4" id="project-box4">
               <div class="info-div">
                 <img src="src/webp/headwaylogo.webp" alt="Beautyhubb Pro website favicon"
                   class="faviconforProjectAquaregia" />
@@ -459,7 +481,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------MyBzB-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box3" id="project-box4">
+            <div class="project-box project-box5" id="project-box5">
               <div class="info-div">
                 <img src="src/png/mybzb.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">My BzB</article>
@@ -493,7 +515,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- --------SSU-------------- -->
           <div data-aos="fade-up" class="project-box-wrapper">
-            <div class="project-box project-box4" id="project-box5">
+            <div class="project-box project-box6" id="project-box6">
               <div class="info-div">
                 <img src="src/png/ssu_logo.png" alt="ssu website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Suvarna Saubhagya Utsav</article>
@@ -527,7 +549,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           </div>
           <!-- -----------Gamexso----------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box5" id="project-box6">
+            <div class="project-box project-box7" id="project-box7">
               <div class="info-div">
                 <img src="src/webp/gamexso_logo.webp" alt="Gamexso website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Gamexso</article>
@@ -558,7 +580,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
 
           <!-- ------------Quantic POS---------- -->
           <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box6" id="project-box7">
+            <div class="project-box project-box8" id="project-box8">
               <div class="info-div">
                 <img src="src/png/quantic_pos.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic POS</article>
@@ -591,7 +613,7 @@ Visionary UI/UX designer focused on user research, wireframing, and prototyping 
           <!-- ---------Quantic Lite------------- -->
 		  
 		  <div class="project-box-wrapper" data-aos="fade-up">
-            <div class="project-box project-box7" id="project-box8">
+            <div class="project-box project-box9" id="project-box9">
               <div class="info-div">
                 <img src="src/png/quantic_lite.png" alt="netflix website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Quantic Lite</article>
